tests/cases/parse_error/1_nested_struct_and_enum.stderr
error: if nesting a struct: expected `,`
  --> tests/cases/parse_error/1_nested_struct_and_enum.rs:10:9
   |
10 |         last: String,
   |         ^^^^

error: if nesting an enum: expected `,`
 --> tests/cases/parse_error/1_nested_struct_and_enum.rs:9:14
  |
9 |         first: String
  |              ^

error: if nesting a block: unexpected token, expected `;`
 --> tests/cases/parse_error/1_nested_struct_and_enum.rs:9:14
  |
9 |         first: String
  |              ^
